# gta-sa-self-driving-car

./: README.md
.github/workflows/: cmake.yml
src/: CMakeLists.txt  gta-samp-driver.sln  main.cpp
src/application/: Console.cpp
src/drivers/: Checkpoint.cpp  Driver.cpp  Walker.cpp
src/game/: GameResources.cpp  GameUtils.cpp  MemoryReader.cpp
src/gta-samp-driver/: AxisManager.cpp  Bot.cpp  CMakeLists.txt  CaptchaSolver.cpp  ChatManager.cpp  Driver.cpp  GameResources.cpp  MathTrigonometry.cpp  MemoryReader.cpp  Movement.cpp  gta-samp-driver.vcxproj  gta-samp-driver.vcxproj.filters
src/gta-samp-driver/routes/: DolphinFisherman.cpp
src/interactions/: CaptchaSolver.cpp  ChatManager.cpp  Movement.cpp
src/math/: AxisManager.cpp  MathTrigonometry.cpp
src/routes/fishermans/: DolphinFisherman.cpp  Fisherman.cpp  TurtleFisherman.cpp
src/routes/miners/: CopperMiner.cpp  IronMiner.cpp  MercuryMiner.cpp  Miner.cpp  TitaniumMiner.cpp
